# Feuerwehr-Melderanschluss

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
niclas-alarmmelder-pro/: fp-info-cache  fp-lib-table  niclas-alarmmelder-pro-B_Cu.gbr  niclas-alarmmelder-pro-B_Mask.gbr  niclas-alarmmelder-pro-B_Paste.gbr  niclas-alarmmelder-pro-B_Silkscreen.gbr  niclas-alarmmelder-pro-Edge_Cuts.gbr  niclas-alarmmelder-pro-F_Cu.gbr  niclas-alarmmelder-pro-F_Mask.gbr  niclas-alarmmelder-pro-F_Paste.gbr  niclas-alarmmelder-pro-F_Silkscreen.gbr  niclas-alarmmelder-pro-NPTH.drl  niclas-alarmmelder-pro-PTH.drl  niclas-alarmmelder-pro-job.gbrjob  niclas-alarmmelder-pro.kicad_pcb  niclas-alarmmelder-pro.kicad_prl  niclas-alarmmelder-pro.kicad_pro  niclas-alarmmelder-pro.kicad_sch  sym-lib-table  ~_autosave-niclas-alarmmelder-pro.kicad_pcb.lck
src/: main.rs
