[package]
edition      = "2021"
name         = "esp_fw"
rust-version = "1.86"
version      = "0.1.0"
publish = false
license = "MIT"
description = "ESP32-Anschluss über 5-Pol-DIN-Buchse an Swissphone LGRA Expert Funkmeldeempfänger-Ladegerät"
authors = ["Niclas Klugmann <niclas@klugmann.de>", "Fabian Scharf scharfling@gmail.com"]

[[bin]]
name = "esp_fw"
path = "./src/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
